# Codecure

./: .gitignore  README.md  next.config.mjs  package-lock.json  package.json
app/: globals.css  layout.tsx  page.tsx
app/insights/: page.tsx
app/methodology/: page.tsx
app/predict/: page.tsx
app/results/: page.tsx
backend/: api_app.py  main.py  model.py  requirements.txt
components/: footer.tsx  navigation.tsx
data/: sample_template.csv
data/processed/tox21/: assay_names.json  compound_metadata.csv  dataset_summary.json  dense_feature_names.json  feature_names.json  selected_sparse_feature_names.json  test_ids.npy  test_labels.csv  train_ids.npy  train_labels.csv  y_test.npy  y_train.npy
models/: training_metrics.csv  training_metrics.json
reports/: feature_importance_global.csv  feature_importance_per_assay.csv  feature_importance_report.json
scripts/: feature_importance.py  predict.py  preprocess.py  pyproject.toml  train.py
